[EAI-27] Fixed tag picker field with EAI button not stretched to the full column width

--- a/ui.apps/src/main/content/jcr_root/apps/etoolbox-authoring-insider/components/ui/runtime/css/embeds.less
+++ b/ui.apps/src/main/content/jcr_root/apps/etoolbox-authoring-insider/components/ui/runtime/css/embeds.less
@@ -40,6 +40,11 @@
     bottom: 0;
     position: absolute;
   }
+
+  foundation-autocomplete {
+    flex-grow: 1;
+    width: unset;
+  }
 }
 
 .coral-Form-fieldwrapper {
